<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_insert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteMilk"
    android:isScrollContainer="true"
    app:layout_constraintTop_toBottomOf="parent"
    tools:context=".ui.books.InsertFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/whiteMilk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteMilk"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftTitle_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/title"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteMilk"
                    android:inputType="text"
                    android:maxLength="65"
                    android:maxLines="1"
                    tools:layout_editor_absoluteX="-9dp"
                    tools:layout_editor_absoluteY="217dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftAuthor_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/author"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteMilk"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftIlustrator_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/ilustrator"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiIlustrator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteMilk"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftCover_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/cover"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiCover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteMilk"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftEdition_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/edition"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiEdition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteMilk"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftPrint_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/print"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiPrint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteMilk"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftFineshing_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/finishing"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiFineshing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteMilk"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftDate_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/date_printed"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteMilk"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftLegaldeposit_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/legal_deposit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiLegaldeposit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteMilk"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftIsbn_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/isbn"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiIsbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteMilk"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:padding="50dp">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/cancel_action"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="#40C4FF"
                    android:text="@string/cancel" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn_Addbook"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="#388E3C"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout >